# hisock-voip-app

./: LICENSE  README.md  cleancode.py  main.py  pyproject.toml  requirements.txt  server_main.py
src/: main_window.py  startup_window.py  style.qss
src/styles/: main.qss  override.qss
src/threads/: audio.py  qthreadedclient.py  videocap.py
src/ui/: main.ui  main_ui.py  startup_dialog.ui
src/ui/custom/: dm_list_item.py  message.py  notification.py
