[tool.poetry]
name = "hisock-voip-app"
version = "0.1.0"
description = "A basic VoIP app created with the hisock library"
authors = ["Brandon <bmcomis2018@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
qt-material = "^2.14"
sounddevice = "^0.4.6"
opencv-python-headless = "^4.8.0.74"
pyqt6 = "^6.5.1"
hisock = {git = "https://github.com/SSS-Says-Snek/hisock.git"}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
